Added new features

--- a/clipboard.html
+++ b/clipboard.html
@@ -8,14 +8,12 @@
 <body>
     <div>
         <h1 class="text">Enter to add new items to your Cart🛒🛒🛒</h1>
-        <input type="text" name="" id="input-value">
+        <input type="text" name="" id="input_value">
         <button class="the-button" onclick="addToCarts()">Add to Cart</button>
         <div class="display-box">
             <div id="parent" class="the_added_item">
                 <ul id="task-list">
-                    <!-- <li>Number 1</li>
-                    <li>Number 2</li>
-                    <li>Number 3</li> -->
+                    
                 </ul>
             </div>     
         </div>
